--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script defer type="module" src="notyf.js"></script>
     <script defer type="module" src="main.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.svg">
     <title>Cryptocurrency - home</title>
 </head>
 
