--- a/reports.html
+++ b/reports.html
@@ -13,7 +13,7 @@
     <script defer type="module" src="notyf.js"></script>
     <script defer type="module" src="links.js"></script>
     <script defer type="module" src="reports.js"></script>
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.svg">
     <title>Cryptocurrency - reports</title>
 </head>
 
