--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer type="module" src="links.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.svg">
     <title>About the website</title>
 </head>
 
@@ -26,7 +26,7 @@
             The site displays the "strongest" 100 virtual coins (cryptocoins).<br>
             The data is taken from the site
             <a href="https://www.coingecko.com" target="_blank">
-                <img class="coingeckoImage" src="./assets/images/coingencko.png">CoinGecko
+                <img class="coingeckoImage" src="assets/images/coingencko.png">CoinGecko
             </a>
             <br>
             Information for the graphs was taken from <a href="https://min-api.cryptocompare.com/" target="_blank">CryptoCompare</a>
@@ -42,7 +42,7 @@
             <br><br>
             I hope you find this site interesting and useful. <br>
         </P>
-        <img class="myLogoImage" src="./assets/images/myLogo.svg">
+        <img class="myLogoImage" src="assets/images/myLogo.svg">
 
         <footer id="footer">
             This site was created by O. Barnea Cohen. Images were made by Gemini (google). <br>
